<resources>
    <string name="app_name">Dount Branch</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="search_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="reservation">Reservations</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="create_your_account_now">create your account now</string>
    <string name="continue1">Continue</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="phone">Phone number</string>
    <string name="login">Login</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_us">Contact us</string>
    <string name="wait">Wait</string>
    <string name="current">Current Orders</string>
    <string name="prev">Previous</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="next">Next</string>
    <string name="notifications">notifications</string>
    <string name="sign_up">Sign up</string>
    <string name="update">Update</string>
    <string name="please_enter_code_sent_to">please enter code sent to</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="field_required">field required</string>
    <string name="inv_email">invaled email</string>
    <string name="search">Search...</string>
    <string name="rate_app">Rate App</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="no_reservation_to_show">No reservation to show</string>
    <string name="sorry">Sorry !</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="map_key" />
    <string name="filter">Filter:</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="show_results">Show results</string>
    <string name="more">More</string>
    <string name="details">Details</string>
    <string name="book_now">Book now</string>
    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to</string>
    <string name="user_blocked">User Blocked</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="user_found">User Found</string>
    <string name="suc">Success</string>
    <string name="all">All</string>
    <string name="no_services_to_show">No services to show</string>
    <string name="cahnge">Change</string>
    <string name="show">Show</string>
    <string name="no_search_result">No search result</string>
    <string name="offers">Offers</string>
    <string name="change">Change</string>
    <string name="cnt_book">You cannot book now</string>
    <string name="choose_language">Change language</string>
    <string name="previous_orders">Previous orders</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="pass_short">Password is too short</string>
    <string name="inv_cred">Invalid credential</string>
    <string name="iden_should_be">identity should be 15 characters</string>
    <string name="vehicle">Vehicle</string>
    <string name="identification">Identification</string>
    <string name="data_exist">This data already exists</string>
    <string name="ch_vehicle">Choose vehicle</string>
    <string name="good_morning">Good morning</string>
    <string name="good_evening">Good evening</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="order_num">Order num :</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="last_year">Last year</string>
    <string name="show_location">Show location</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="accept">Accept</string>
    <string name="refused">Refused</string>
    <string name="end_order">End order</string>
    <string name="on_way">On Way</string>
    <string name="customer">Customer : </string>
    <string name="payment_way">Payment Way : </string>
    <string name="electronic_payment">Electronic Payment</string>
    <string name="cash">Cash</string>
    <string name="wallet">Wallet</string>

</resources>