<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.apps.dount_branch.model.LoginModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray3"
        android:fillViewport="true"
        android:scrollbars="none"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/loginTop"
                android:layout_width="0dp"
                android:layout_height="138dp"
                android:scaleType="centerCrop"
                android:src="@drawable/login_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:src="@drawable/logo"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@+id/ll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginTop"
                app:layout_constraintVertical_bias=".1" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_top_color2"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintVertical_bias="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_bottom_color4"
                    android:gravity="center"
                    android:minWidth="196dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/log_in"
                    android:textColor="@color/color2"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="16sp"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_color3"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:counterEnabled="false"
                    app:errorEnabled="false"
                    app:errorTextColor="@color/red"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/ic_mail"
                    app:startIconTint="@color/gray3"

                    >

                    <EditText
                        android:id="@+id/edtUserName"
                        error="@{model.error_email}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/email"
                        android:lines="1"
                        android:text="@={model.email}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/gray3"
                        android:textSize="14sp"
                        android:inputType="textEmailAddress"
                        android:gravity="start|center_vertical"
                        android:textAlignment="viewStart"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="16sp"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_color3"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:counterEnabled="false"
                    app:errorEnabled="false"
                    app:errorTextColor="@color/red"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/gray3"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/gray3"

                    >

                    <EditText
                        error="@{model.error_password}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:text="@={model.password}"
                        android:gravity="start|center_vertical"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textColorHint="@color/gray3"
                        android:textSize="14sp"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/llSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center_vertical"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/have_an_account"
                        android:textColor="@color/gray3"
                        android:textSize="14sp" />

                    <androidx.legacy.widget.Space
                        android:layout_width="8dp"
                        android:layout_height="0dp" />

                    <TextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textColor="@color/color4"
                        android:textSize="14sp"

                        />
                </LinearLayout>


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/rounded_color4"
                    android:minWidth="150dp"
                    android:text="@string/log_in"
                    android:textColor="@color/color2"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
