<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />


        <variable
            name="model"
            type="com.apps.dount_branch.model.SignUpModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color1"

        >


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <FrameLayout
                    android:id="@+id/flImage"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"

                    >

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:longClickable="false"
                        android:src="@drawable/circle_avatar"
                        app:civ_border_color="@color/color4"
                        app:civ_border_width="4dp"
                        app:civ_circle_background_color="@color/white" />


                    <ImageView

                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="bottom"
                        android:background="@drawable/circle_color4"
                        android:padding="8dp"
                        android:src="@drawable/ic_edit4" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="16sp"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_color3"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:counterEnabled="false"
                    app:errorEnabled="false"
                    app:errorTextColor="@color/red"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/gray3"

                    >

                    <EditText
                        android:id="@+id/edtUserName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/username"
                        android:lines="1"
                        android:text="@={model.username}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/gray3"
                        android:textSize="14sp"
                        error="@{model.error_username}"
                        android:gravity="start|center_vertical"
                        android:textAlignment="viewStart"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/phone"
                    android:textColor="@color/white"
                    android:textSize="16sp"

                    />

                <LinearLayout
                    android:id="@+id/llPhone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/rounded_color3"
                    android:layout_marginTop="5dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"

                    >
                    <androidx.legacy.widget.Space
                        android:layout_width="4dp"
                        android:layout_height="0dp"
                        />
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_call"
                        app:tint="@color/gray3"
                        />
                    <androidx.legacy.widget.Space
                        android:layout_width="8dp"
                        android:layout_height="0dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:text="@{model.phone_code}"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        />
                    <EditText
                        android:id="@+id/edtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/phone"
                        android:lines="1"
                        android:text="@={model.phone}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/gray3"
                        android:textSize="14sp"
                        android:inputType="number"
                        error="@{model.error_phone}"
                        android:gravity="start|center_vertical"
                        android:textAlignment="viewStart"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/vehicle"
                    android:textColor="@color/white"
                    android:textSize="16sp"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_color3"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <androidx.legacy.widget.Space
                        android:layout_width="24dp"
                        android:layout_height="0dp"/>
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_vihcle"
                        />
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        app:backgroundTint="@color/gray3"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/identification"
                    android:textColor="@color/white"
                    android:textSize="16sp"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_color3"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:counterEnabled="false"
                    app:errorEnabled="false"
                    app:errorTextColor="@color/red"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/ic_ident"
                    app:startIconTint="@color/gray3"

                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/identification"
                        android:lines="1"
                        android:text="@={model.identification}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/gray3"
                        android:textSize="14sp"
                        android:maxLength="15"
                        android:inputType="number"
                        error="@{model.error_identification}"
                        android:gravity="start|center_vertical"
                        android:textAlignment="viewStart"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="16sp"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_color3"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:counterEnabled="false"
                    app:errorEnabled="false"
                    app:errorTextColor="@color/red"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/gray3"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/gray3"

                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:gravity="start|center_vertical"
                        android:hint="@string/password"
                        android:inputType="number"
                        android:lines="1"
                        android:text="@={model.password}"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textColorHint="@color/gray3"
                        android:textSize="14sp"
                        error="@{model.error_password}"

                        />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_color4"
                    android:minWidth="180dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/color2"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@color/black_trans"
            android:padding="16dp"
            app:el_duration="800"
            app:el_expanded="false"
            app:el_parallax=".5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/flGallery"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:longClickable="false"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="12dp"
                            android:src="@drawable/ic_gallery"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/gallery"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/flCamera"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:longClickable="false"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="12dp"
                            android:src="@drawable/ic_camera"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/camera"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                </FrameLayout>

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>


        </net.cachapa.expandablelayout.ExpandableLayout>

    </FrameLayout>
</layout>